--- a/mosque-ui/package.json
+++ b/mosque-ui/package.json
@@ -41,6 +41,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
     "bootstrap": "^4.2.1",
+    "build": "^0.1.4",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.2",
     "flag-icon-css": "^3.2.1",
@@ -50,6 +51,7 @@
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-perfect-scrollbar": "^7.2.0",
+    "run": "^1.4.0",
     "rxjs": "^6.3.3",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "^1.1.2",
