--- a/mosque-ui/pom.xml
+++ b/mosque-ui/pom.xml
@@ -55,6 +55,16 @@
           </execution>
 
           <execution>
+            <id>npm install</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <configuration>
+              <arguments>install</arguments>
+            </configuration>
+          </execution>
+
+          <execution>
             <id>npm run build</id>
             <goals>
               <goal>npm</goal>
@@ -67,12 +77,6 @@
         </executions>
       </plugin>
     </plugins>
-    <resources>
-      <resource>
-        <directory>target</directory>
-        <targetPath>static</targetPath>
-      </resource>
-    </resources>
   </build>
 
 </project>
